INTYGFV-16406: Upgrade owasp dependencycheck plugin and configure to use nvd mirror (#332)